@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,15 +26,17 @@ package com.oracle.svm.interpreter;
 
 import static com.oracle.svm.hosted.pltgot.GOTEntryAllocator.GOT_NO_ENTRY;
 import static com.oracle.svm.interpreter.metadata.Bytecodes.INVOKEDYNAMIC;
+import static com.oracle.svm.interpreter.metadata.Bytecodes.INVOKEINTERFACE;
+import static com.oracle.svm.interpreter.metadata.Bytecodes.INVOKESPECIAL;
+import static com.oracle.svm.interpreter.metadata.Bytecodes.INVOKESTATIC;
+import static com.oracle.svm.interpreter.metadata.Bytecodes.INVOKEVIRTUAL;
 import static com.oracle.svm.interpreter.metadata.InterpreterResolvedJavaMethod.EST_NO_ENTRY;
 import static com.oracle.svm.interpreter.metadata.InterpreterResolvedJavaMethod.VTBL_NO_ENTRY;
 import static com.oracle.svm.interpreter.metadata.InterpreterResolvedJavaMethod.VTBL_ONE_IMPL;
 import static com.oracle.svm.interpreter.metadata.InterpreterUniverseImpl.toHexString;
 
 import java.io.IOException;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -58,14 +60,16 @@ import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.word.Pointer;
 
+import com.oracle.graal.pointsto.ObjectScanner.OtherReason;
+import com.oracle.graal.pointsto.ObjectScanner.ScanReason;
+import com.oracle.graal.pointsto.constraints.UnsupportedFeatureException;
 import com.oracle.graal.pointsto.heap.ImageHeapConstant;
-import com.oracle.graal.pointsto.infrastructure.OriginalClassProvider;
 import com.oracle.graal.pointsto.meta.AnalysisField;
+import com.oracle.graal.pointsto.meta.AnalysisMetaAccess;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.AnalysisType;
 import com.oracle.svm.core.BuildArtifacts;
 import com.oracle.svm.core.FunctionPointerHolder;
-import com.oracle.svm.core.InvalidMethodPointerHandler;
 import com.oracle.svm.core.ParsingReason;
 import com.oracle.svm.core.RuntimeAssertionsSupport;
 import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
@@ -73,10 +77,12 @@ import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.hub.DynamicHub;
 import com.oracle.svm.core.meta.MethodPointer;
 import com.oracle.svm.core.option.HostedOptionValues;
+import com.oracle.svm.core.util.UserError;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.graal.hosted.DeoptimizationFeature;
 import com.oracle.svm.hosted.FeatureImpl;
 import com.oracle.svm.hosted.NativeImageGenerator;
+import com.oracle.svm.hosted.classloading.SymbolsFeature;
 import com.oracle.svm.hosted.code.CompileQueue;
 import com.oracle.svm.hosted.code.SubstrateCompilationDirectives;
 import com.oracle.svm.hosted.image.NativeImageHeap;
@@ -102,7 +108,7 @@ import com.oracle.svm.interpreter.metadata.MetadataUtil;
 import com.oracle.svm.interpreter.metadata.ReferenceConstant;
 import com.oracle.svm.interpreter.metadata.serialization.SerializationContext;
 import com.oracle.svm.interpreter.metadata.serialization.Serializers;
-import com.oracle.svm.util.ReflectionUtil;
+import com.oracle.svm.util.JVMCIReflectionUtil;
 
 import jdk.graal.compiler.api.replacements.SnippetReflectionProvider;
 import jdk.graal.compiler.core.common.SuppressFBWarnings;
@@ -113,6 +119,7 @@ import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugin;
 import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugins;
 import jdk.graal.compiler.options.OptionValues;
 import jdk.graal.compiler.phases.util.Providers;
+import jdk.vm.ci.meta.ConstantPool;
 import jdk.vm.ci.meta.JavaConstant;
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.JavaMethod;
@@ -120,6 +127,7 @@ import jdk.vm.ci.meta.MetaAccessProvider;
 import jdk.vm.ci.meta.PrimitiveConstant;
 import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
+import jdk.vm.ci.meta.ResolvedJavaType;
 import jdk.vm.ci.meta.UnresolvedJavaMethod;
 
 /**
@@ -134,9 +142,9 @@ import jdk.vm.ci.meta.UnresolvedJavaMethod;
 @Platforms(Platform.HOSTED_ONLY.class)
 @AutomaticallyRegisteredFeature
 public class DebuggerFeature implements InternalFeature {
-    private Method enterInterpreterMethod;
+    private AnalysisMethod enterInterpreterMethod;
     private InterpreterStubTable enterStubTable = null;
-    private final List<Class<?>> classesUsedByInterpreter = new ArrayList<>();
+    private final List<ResolvedJavaType> classesUsedByInterpreter = new ArrayList<>();
     private Set<AnalysisMethod> methodsProcessedDuringAnalysis;
     private InvocationPlugins invocationPlugins;
     private static final String SYNTHETIC_ASSERTIONS_DISABLED_FIELD_NAME = "$assertionsDisabled";
@@ -151,12 +159,13 @@ public class DebuggerFeature implements InternalFeature {
         return Arrays.asList(
                         DeoptimizationFeature.class,
                         InterpreterFeature.class,
-                        IdentityMethodAddressResolverFeature.class);
+                        IdentityMethodAddressResolverFeature.class,
+                        SymbolsFeature.class);
     }
 
-    private static Class<?> getArgumentClass(GraphBuilderContext b, ResolvedJavaMethod targetMethod, int parameterIndex, ValueNode arg) {
+    private static ResolvedJavaType getArgumentType(GraphBuilderContext b, ResolvedJavaMethod targetMethod, int parameterIndex, ValueNode arg) {
         SubstrateGraphBuilderPlugins.checkParameterUsage(arg.isConstant(), b, targetMethod, parameterIndex, "parameter is not a compile time constant");
-        return OriginalClassProvider.getJavaClass(b.getConstantReflection().asJavaType(arg.asJavaConstant()));
+        return b.getConstantReflection().asJavaType(arg.asJavaConstant());
     }
 
     @Override
@@ -167,9 +176,9 @@ public class DebuggerFeature implements InternalFeature {
         r.register(new InvocationPlugin.RequiredInvocationPlugin("markKlass", Class.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode arg1) {
-                Class<?> targetKlass = getArgumentClass(b, targetMethod, 1, arg1);
-                InterpreterUtil.log("[invocation plugin] Adding %s", targetKlass);
-                classesUsedByInterpreter.add(targetKlass);
+                ResolvedJavaType targetType = getArgumentType(b, targetMethod, 1, arg1);
+                InterpreterUtil.log("[invocation plugin] Adding %s", targetType.getUnqualifiedName());
+                classesUsedByInterpreter.add(targetType);
 
                 /* no-op in compiled code */
                 return true;
@@ -187,33 +196,32 @@ public class DebuggerFeature implements InternalFeature {
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
         FeatureImpl.BeforeAnalysisAccessImpl accessImpl = (FeatureImpl.BeforeAnalysisAccessImpl) access;
+        AnalysisMetaAccess metaAccess = accessImpl.getMetaAccess();
 
-        try {
-            enterInterpreterMethod = InterpreterStubSection.class.getMethod("enterMethodInterpreterStub", int.class, Pointer.class);
-            accessImpl.registerAsRoot(enterInterpreterMethod, true, "stub for interpreter");
+        AnalysisType aInterpreterStubSection = metaAccess.lookupJavaType(InterpreterStubSection.class);
+        enterInterpreterMethod = (AnalysisMethod) JVMCIReflectionUtil.getUniqueDeclaredMethod(metaAccess, aInterpreterStubSection, "enterMethodInterpreterStub", int.class, Pointer.class);
+        accessImpl.registerAsRoot(enterInterpreterMethod, true, "stub for interpreter");
 
-            // Holds references that must be kept alive in the image heap.
-            access.registerAsAccessed(DebuggerSupport.class.getDeclaredField("referencesInImage"));
-            access.registerAsAccessed(DebuggerSupport.class.getDeclaredField("methodPointersInImage"));
+        // Holds references that must be kept alive in the image heap.
+        AnalysisType aDebuggerSupport = metaAccess.lookupJavaType(DebuggerSupport.class);
+        accessImpl.registerAsAccessed((AnalysisField) JVMCIReflectionUtil.getUniqueDeclaredField(aDebuggerSupport, "referencesInImage"),
+                        "Holds references that must be kept alive in the image heap.");
+        accessImpl.registerAsAccessed((AnalysisField) JVMCIReflectionUtil.getUniqueDeclaredField(aDebuggerSupport, "methodPointersInImage"),
+                        "Holds references that must be kept alive in the image heap.");
 
-            accessImpl.registerAsRoot(System.class.getDeclaredMethod("arraycopy", Object.class, int.class, Object.class, int.class, int.class), true,
-                            "Allow interpreting methods that call System.arraycopy");
-        } catch (NoSuchMethodException | NoSuchFieldException e) {
-            throw VMError.shouldNotReachHere(e);
-        }
+        AnalysisType aSystem = metaAccess.lookupJavaType(System.class);
+        accessImpl.registerAsRoot((AnalysisMethod) JVMCIReflectionUtil.getUniqueDeclaredMethod(metaAccess, aSystem, "arraycopy", Object.class, int.class, Object.class, int.class, int.class),
+                        true, "Allow interpreting methods that call System.arraycopy");
 
         registerStringConcatenation(accessImpl);
 
         // GR-53734: Known issues around reachability
-        try {
-            // JDK code introduced a new optional intrinsic:
-            // https://github.com/openjdk/jdk22u/commit/a4e9168bab1c2872ce2dbc7971a45c259270271f
-            // consider DualPivotQuicksort.java:268, int.class is not needed if the sort helper
-            // is inlined, therefore it's not needed. Still needed for interpreter execution.
-            access.registerAsAccessed(Integer.class.getField("TYPE"));
-        } catch (NoSuchFieldException e) {
-            throw VMError.shouldNotReachHere(e);
-        }
+        // JDK code introduced a new optional intrinsic:
+        // https://github.com/openjdk/jdk22u/commit/a4e9168bab1c2872ce2dbc7971a45c259270271f
+        // consider DualPivotQuicksort.java:268, int.class is not needed if the sort helper
+        // is inlined, therefore it's not needed. Still needed for interpreter execution.
+        AnalysisType aInteger = metaAccess.lookupJavaType(Integer.class);
+        accessImpl.registerAsAccessed((AnalysisField) JVMCIReflectionUtil.getUniqueDeclaredField(aInteger, "TYPE"), "Read by the interpreter");
 
         methodsProcessedDuringAnalysis = new HashSet<>();
 
@@ -236,29 +244,36 @@ public class DebuggerFeature implements InternalFeature {
          * These registrations enable the interpreter to "interpret" StringBuilder-based String
          * concatenation optimized away by the compiler.
          */
-        try {
-            List<Method> appendMethods = Arrays.stream(StringBuilder.class.getDeclaredMethods())
-                            .filter(m -> "append".equals(m.getName()))
-                            .collect(Collectors.toList());
-            for (Method m : appendMethods) {
-                accessImpl.registerAsRoot(m, false, "string concat in interpreter");
-            }
-            for (Constructor<?> c : StringBuilder.class.getDeclaredConstructors()) {
-                accessImpl.registerAsRoot(c, true, "string concat in interpreter");
-            }
-            accessImpl.registerAsRoot(StringBuilder.class.getConstructor(), true, "string concat in interpreter");
-        } catch (NoSuchMethodException e) {
-            throw new RuntimeException(e);
+        AnalysisMetaAccess metaAccess = accessImpl.getMetaAccess();
+        AnalysisType aStringBuilder = metaAccess.lookupJavaType(StringBuilder.class);
+        List<AnalysisMethod> appendMethods = Arrays.stream(aStringBuilder.getDeclaredMethods(false))
+                        .filter(m -> "append".equals(m.getName())).toList();
+        for (AnalysisMethod m : appendMethods) {
+            accessImpl.registerAsRoot(m, false, "string concat in interpreter");
         }
+        for (AnalysisMethod c : aStringBuilder.getDeclaredConstructors(false)) {
+            accessImpl.registerAsRoot(c, true, "string concat in interpreter");
+        }
+        AnalysisMethod aMethod = (AnalysisMethod) JVMCIReflectionUtil.getDeclaredConstructor(metaAccess, aStringBuilder);
+        accessImpl.registerAsRoot(aMethod, true, "string concat in interpreter");
     }
 
     static boolean isReachable(AnalysisMethod m) {
         return m.isReachable() || m.isDirectRootMethod() || m.isVirtualRootMethod();
     }
 
+    private static boolean isInvokeSpecial(AnalysisMethod method) {
+        boolean invokeSpecial = method.isConstructor();
+        if (!invokeSpecial) {
+            invokeSpecial = Modifier.isPrivate(method.getModifiers());
+        }
+        return invokeSpecial;
+    }
+
     @Override
     public void duringAnalysis(DuringAnalysisAccess access) {
         FeatureImpl.DuringAnalysisAccessImpl accessImpl = (FeatureImpl.DuringAnalysisAccessImpl) access;
+        MetaAccessProvider metaAccessProvider = accessImpl.getMetaAccess();
 
         boolean addedIndyHelper = false;
         for (AnalysisMethod m : accessImpl.getUniverse().getMethods()) {
@@ -279,13 +294,13 @@ public class DebuggerFeature implements InternalFeature {
 
         if (!classesUsedByInterpreter.isEmpty()) {
             access.requireAnalysisIteration();
-            for (Class<?> k : classesUsedByInterpreter) {
-                accessImpl.registerAsUsed(k);
-                Arrays.stream(k.getDeclaredMethods()).filter(m -> m.getName().startsWith("test")).forEach(m -> {
-                    AnalysisMethod aMethod = accessImpl.getMetaAccess().lookupJavaMethod(m);
+            for (ResolvedJavaType k : classesUsedByInterpreter) {
+                AnalysisType aType = k instanceof AnalysisType analysisType ? analysisType : accessImpl.getUniverse().lookup(k);
+                accessImpl.registerAsUsed(aType, "used by interpreter");
+                Arrays.stream(aType.getDeclaredMethods(false)).filter(m -> m.getName().startsWith("test")).forEach(aMethod -> {
                     VMError.guarantee(!aMethod.isConstructor());
                     accessImpl.registerAsRoot(aMethod, aMethod.isConstructor(), "reached due to interpreter directive");
-                    InterpreterUtil.log("[during analysis] Adding method %s", m);
+                    InterpreterUtil.log("[during analysis] Adding method %s", aMethod);
                 });
             }
             classesUsedByInterpreter.clear();
@@ -305,14 +320,14 @@ public class DebuggerFeature implements InternalFeature {
 
             if (method.isReachable() && !methodsProcessedDuringAnalysis.contains(method)) {
                 methodsProcessedDuringAnalysis.add(method);
-                if (method.wrapped instanceof SubstitutionMethod subMethod && subMethod.isUserSubstitution()) {
+                if (method.wrapped instanceof SubstitutionMethod subMethod) {
                     if (subMethod.getOriginal().isNative()) {
-                        accessImpl.registerAsRoot(method, false, "compiled entry point of substitution needed for interpreter");
+                        accessImpl.registerAsRoot(method, isInvokeSpecial(method), "compiled entry point of substitution needed for interpreter");
                         continue;
                     }
                 }
                 byte[] code = method.getCode();
-                if (code == null) {
+                if (code == null || !InterpreterFeature.callableByInterpreter(method, metaAccessProvider)) {
                     continue;
                 }
                 AnalysisType declaringClass = method.getDeclaringClass();
@@ -328,26 +343,21 @@ public class DebuggerFeature implements InternalFeature {
                     accessImpl.registerAsUsed(declaringClass, "interpreter needs dynamic hub at runtime for this class");
                     access.requireAnalysisIteration();
                 }
+                InvocationPlugin invocationPlugin = accessImpl.getBigBang().getProviders(method).getGraphBuilderPlugins().getInvocationPlugins().lookupInvocation(method,
+                                accessImpl.getBigBang().getOptions());
+                if (invocationPlugin != null) {
+                    // There's an invocation plugin for this method.
+                    continue;
+                }
+                boolean analyzeCallees = true;
                 for (int bci = 0; bci < BytecodeStream.endBCI(code); bci = BytecodeStream.nextBCI(code, bci)) {
                     int bytecode = BytecodeStream.currentBC(code, bci);
                     if (bytecode == INVOKEDYNAMIC) {
                         int targetMethodCPI = BytecodeStream.readCPI4(code, bci);
-                        JavaMethod targetMethod = method.getConstantPool().lookupMethod(targetMethodCPI, bytecode);
-                        /*
-                         * SVM optimizes away javac's INVOKDYNAMIC-based String concatenation e.g.
-                         * MH.makeConcatWithConstants(...) . The CP method entry remains unresolved.
-                         *
-                         * Only reachable call sites should have its method and appendix included in
-                         * the image, for now, ALL INVOKEDYNAMIC call sites of reachable methods are
-                         * included.
-                         */
-                        if (targetMethod instanceof UnresolvedJavaMethod) {
-                            method.getConstantPool().loadReferencedType(targetMethodCPI, bytecode);
-                            targetMethod = method.getConstantPool().lookupMethod(targetMethodCPI, bytecode);
-                        }
-                        if (targetMethod instanceof AnalysisMethod analysisMethod) {
-                            accessImpl.registerAsRoot(analysisMethod, true, "forced for indy support in interpreter");
-                            InterpreterUtil.log("[during analysis] force %s mark as reachable", targetMethod);
+                        AnalysisMethod analysisMethod = getAnalysisMethodAt(method.getConstantPool(), targetMethodCPI, bytecode);
+                        if (analysisMethod != null) {
+                            accessImpl.registerAsRoot(analysisMethod, false, "forced for indy support in interpreter");
+                            InterpreterUtil.log("[during analysis] force %s mark as reachable", analysisMethod);
                         }
 
                         JavaConstant appendixConstant = method.getConstantPool().lookupAppendix(targetMethodCPI, bytecode);
@@ -355,10 +365,63 @@ public class DebuggerFeature implements InternalFeature {
                             supportImpl.ensureConstantIsInImageHeap(snippetReflection, imageHeapConstant);
                         }
                     }
+                    if (analyzeCallees) {
+                        switch (bytecode) {
+                            /* GR-53540: Handle invokedyanmic too */
+                            case INVOKESPECIAL, INVOKESTATIC, INVOKEVIRTUAL, INVOKEINTERFACE -> {
+                                int originalCPI = BytecodeStream.readCPI(code, bci);
+
+                                try {
+                                    AnalysisMethod calleeMethod = getAnalysisMethodAt(method.getConstantPool(), originalCPI, bytecode);
+                                    if (calleeMethod == null || !calleeMethod.isReachable()) {
+                                        continue;
+                                    }
+
+                                    if (!InterpreterFeature.callableByInterpreter(calleeMethod, metaAccessProvider)) {
+                                        InterpreterUtil.log("[process invokes] cannot execute %s due to call-site (%s) @ bci=%s is not callable by interpreter%n", method.getName(), bci, calleeMethod);
+                                        if (method.getAnalyzedGraph() == null) {
+                                            accessImpl.registerAsRoot(method, isInvokeSpecial(method), "method handle for interpreter");
+                                            accessImpl.registerAsUsed(method.getDeclaringClass().getJavaClass());
+                                            access.requireAnalysisIteration();
+                                        }
+                                        if (method.reachableInCurrentLayer()) {
+                                            SubstrateCompilationDirectives.singleton().registerForcedCompilation(method);
+                                        }
+                                        analyzeCallees = false;
+                                        break;
+                                    }
+                                } catch (UnsupportedFeatureException | UserError.UserException e) {
+                                    InterpreterUtil.log("[process invokes] lookup in method %s failed due to:", method);
+                                    InterpreterUtil.log(e);
+                                    // ignore, call will fail at run-time if reached
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
         supportImpl.trimForcedReferencesInImageHeap();
+    }
+
+    private static AnalysisMethod getAnalysisMethodAt(ConstantPool constantPool, int targetMethodCPI, int bytecode) {
+        JavaMethod targetMethod = constantPool.lookupMethod(targetMethodCPI, bytecode);
+        /*
+         * SVM optimizes away javac's INVOKDYNAMIC-based String concatenation e.g.
+         * MH.makeConcatWithConstants(...) . The CP method entry remains unresolved.
+         *
+         * Only reachable call sites should have its method and appendix included in the image, for
+         * now, ALL INVOKEDYNAMIC call sites of reachable methods are included.
+         */
+        if (targetMethod instanceof UnresolvedJavaMethod) {
+            constantPool.loadReferencedType(targetMethodCPI, bytecode);
+            targetMethod = constantPool.lookupMethod(targetMethodCPI, bytecode);
+        }
+        if (targetMethod instanceof AnalysisMethod analysisMethod) {
+            return analysisMethod;
+        } else {
+            return null;
+        }
     }
 
     @Override
@@ -372,7 +435,7 @@ public class DebuggerFeature implements InternalFeature {
         FeatureImpl.BeforeCompilationAccessImpl accessImpl = (FeatureImpl.BeforeCompilationAccessImpl) access;
         HostedUniverse hUniverse = accessImpl.getUniverse();
         HostedMetaAccess hMetaAccess = accessImpl.getMetaAccess();
-        MetaAccessProvider aMetaAccess = hMetaAccess.getWrapped();
+        AnalysisMetaAccess aMetaAccess = (AnalysisMetaAccess) hMetaAccess.getWrapped();
         BuildTimeInterpreterUniverse iUniverse = BuildTimeInterpreterUniverse.singleton();
 
         for (HostedType hType : hUniverse.getTypes()) {
@@ -392,7 +455,7 @@ public class DebuggerFeature implements InternalFeature {
                         if (staticField.isStatic() && staticField.isSynthetic() && staticField.getName().startsWith(SYNTHETIC_ASSERTIONS_DISABLED_FIELD_NAME)) {
                             Class<?> declaringClass = aType.getJavaClass();
                             boolean value = !RuntimeAssertionsSupport.singleton().desiredAssertionStatus(declaringClass);
-                            InterpreterResolvedJavaField field = iUniverse.getOrCreateField(staticField);
+                            InterpreterResolvedJavaField field = iUniverse.getOrCreateField(analysisStaticField);
                             JavaConstant javaConstant = iUniverse.constant(JavaConstant.forBoolean(value));
                             BuildTimeInterpreterUniverse.setUnmaterializedConstantValue(field, javaConstant);
                             field.markAsArtificiallyReachable();
@@ -406,10 +469,10 @@ public class DebuggerFeature implements InternalFeature {
         for (HostedMethod hMethod : hUniverse.getMethods()) {
             AnalysisMethod aMethod = hMethod.getWrapped();
             if (isReachable(aMethod)) {
-                boolean needsMethodBody = InterpreterFeature.executableByInterpreter(aMethod);
+                boolean needsMethodBody = InterpreterFeature.executableByInterpreter(aMethod) && InterpreterFeature.callableByInterpreter(hMethod, hMetaAccess);
                 // Test if the methods needs to be compiled for execution in the interpreter:
                 if (aMethod.getAnalyzedGraph() != null && //
-                                (aMethod.wrapped instanceof SubstitutionMethod subMethod && subMethod.isUserSubstitution() ||
+                                (aMethod.wrapped instanceof SubstitutionMethod ||
                                                 invocationPlugins.lookupInvocation(aMethod, invocationLookupOptions) != null)) {
                     // The method is substituted, or an invocation plugin is registered
                     SubstrateCompilationDirectives.singleton().registerForcedCompilation(hMethod);
@@ -433,22 +496,20 @@ public class DebuggerFeature implements InternalFeature {
 
         iUniverse.purgeUnreachable(hMetaAccess);
 
-        Field vtableHolderField = ReflectionUtil.lookupField(InterpreterResolvedObjectType.class, "vtableHolder");
+        AnalysisField vtableHolderField = (AnalysisField) JVMCIReflectionUtil.getUniqueDeclaredField(aMetaAccess.lookupJavaType(InterpreterResolvedObjectType.class), "vtableHolder");
+        ScanReason reason = new OtherReason("Manual rescan triggered before compilation from " + DebuggerFeature.class);
         for (HostedType hostedType : hUniverse.getTypes()) {
-            iUniverse.mirrorSVMVTable(hostedType, objectType -> accessImpl.getHeapScanner().rescanField(objectType, vtableHolderField));
+            iUniverse.mirrorSVMVTable(hostedType, objectType -> accessImpl.getHeapScanner().rescanField(objectType, vtableHolderField, reason));
         }
-
-        HostedMethod methodNotCompiledHandler = hMetaAccess.lookupJavaMethod(InvalidMethodPointerHandler.METHOD_POINTER_NOT_COMPILED_HANDLER_METHOD);
-        InterpreterMethodPointerHolder.setMethodNotCompiledHandler(new MethodPointer(methodNotCompiledHandler));
 
         // Allow methods that call System.arraycopy to be interpreted.
-        try {
-            HostedMethod arraycopy = hMetaAccess.lookupJavaMethod(
-                            System.class.getDeclaredMethod("arraycopy", Object.class, int.class, Object.class, int.class, int.class));
-            SubstrateCompilationDirectives.singleton().registerForcedCompilation(arraycopy);
-        } catch (NoSuchMethodException e) {
-            throw new RuntimeException(e);
-        }
+
+        HostedType systemClass = hMetaAccess.lookupJavaType(System.class);
+        AnalysisMethod arraycopy = (AnalysisMethod) JVMCIReflectionUtil.getUniqueDeclaredMethod(aMetaAccess,
+                        systemClass.getWrapped(), "arraycopy", Object.class, int.class, Object.class, int.class, int.class);
+        SubstrateCompilationDirectives.singleton().registerForcedCompilation(arraycopy);
+
+        InterpreterFeature.prepareSignatures();
     }
 
     @Override
@@ -539,7 +600,7 @@ public class DebuggerFeature implements InternalFeature {
                 VMError.guarantee(field.isUnmaterializedConstant());
                 VMError.guarantee(field.getUnmaterializedConstant() != null);
             } else if (hostedField.isUnmaterialized()) {
-                AnalysisField analysisField = (AnalysisField) field.getOriginalField();
+                AnalysisField analysisField = field.getOriginalField();
                 if (hostedField.getType().isWordType() || analysisField.getJavaKind().isPrimitive()) {
                     JavaConstant constant = heap.hConstantReflection.readFieldValue(hostedField, null);
                     assert constant instanceof PrimitiveConstant;
@@ -558,8 +619,7 @@ public class DebuggerFeature implements InternalFeature {
                 InterpreterUtil.log("Found materialized field without location: %s", hostedField);
                 BuildTimeInterpreterUniverse.setUnmaterializedConstantValue(field, JavaConstant.forIllegal());
             } else {
-                int fieldOffset = hostedField.getOffset();
-                field.setOffset(fieldOffset);
+                BuildTimeInterpreterUniverse.singleton().initializeJavaFieldFromHosted(hostedField, field);
             }
         }
 
@@ -586,7 +646,7 @@ public class DebuggerFeature implements InternalFeature {
             }
             HostedField hostedField = accessImpl.getMetaAccess().getUniverse().optionalLookup(field.getOriginalField());
             if (hostedField.isUnmaterialized()) {
-                AnalysisField analysisField = (AnalysisField) field.getOriginalField();
+                AnalysisField analysisField = field.getOriginalField();
                 if (hostedField.getType().isWordType()) {
                     // Ignore, words are stored as primitive values.
                 } else if ((analysisField.isFolded() && analysisField.getJavaKind().isObject())) {
@@ -703,7 +763,7 @@ public class DebuggerFeature implements InternalFeature {
 
         InterpreterStubSection stubSection = ImageSingletons.lookup(InterpreterStubSection.class);
 
-        stubSection.markEnterStubPatch(accessImpl.getHostedMetaAccess().lookupJavaMethod(enterInterpreterMethod));
+        stubSection.markEnterStubPatch(accessImpl.getHostedUniverse().lookup(enterInterpreterMethod));
         enterStubTable.writeMetadataHashString(hashString.getBytes(StandardCharsets.UTF_8));
     }
 
